crates/kaze-core/kaze.h

  typedef unsigned int uint32_t;
  typedef signed int   int32_t;
#define KZ_OK      (0)
#define KZ_INVALID (-1) /* argument invalid */
#define KZ_FAIL    (-2) /* operation failed (see errno for real error) */
#define KZ_CLOSED  (-3) /* ring buffer is closed */
#define KZ_TOOBIG  (-4) /* enqueue data is too big */
#define KZ_AGAIN   (-5) /* no data available or no enough space */
#define KZ_BUSY    (-6) /* another reading/writing operation is in progress */
#define KZ_TIMEOUT (-7) /* operation timed out */
#define KZ_CREATE (1 << 0)
#define KZ_EXCL   (1 << 1)
#define KZ_RESET  (1 << 2)
#define KZ_READ  (1 << 0)
#define KZ_WRITE (1 << 1)
#define KZ_BOTH  (KZ_READ | KZ_WRITE)
#define KZ_MAX_SIZE ((size_t)0xFFFFFFFFU)
KZ_NS_BEGIN


/* global operations */

KZ_API size_t kz_aligned(size_t bufsize, size_t pagesize);
KZ_API int    kz_exists(const char *name, int *powner, int *puser);
KZ_API int    kz_unlink(const char *name);
KZ_API const char *kz_failerror(void);
KZ_API void        kz_freefailerror(const char *s);
/* object daclarations */

typedef struct kz_State   kz_State;
typedef struct kz_Context kz_Context;
/* queue creation/destruction */

KZ_API kz_State *kz_open(const char *name, int flags, size_t bufsize);
KZ_API void      kz_close(kz_State *S);
KZ_API int kz_shutdown(kz_State *S, int mode);
/* queue info */

KZ_API const char *kz_name(const kz_State *S);
KZ_API size_t      kz_size(const kz_State *S);
KZ_API int kz_pid(const kz_State *S);
KZ_API int kz_isowner(const kz_State *S);
KZ_API int kz_isclosed(const kz_State *S);
/* read/write */

KZ_API int kz_read(kz_State *S, kz_Context *ctx);
KZ_API int kz_write(kz_State *S, kz_Context *ctx, size_t len);
KZ_API int   kz_isread(const kz_Context *ctx);
KZ_API char *kz_buffer(kz_Context *ctx, size_t *plen);
KZ_API int   kz_commit(kz_Context *ctx, size_t len);
KZ_API void  kz_cancel(kz_Context *ctx);
KZ_API int kz_wait(kz_State *S, size_t len, int millis);
KZ_API int kz_waitcontext(kz_Context *ctx, int millis);
/* object definitions */

struct kz_Context {
    /* all fields below are private to the implementation */
    void   *state;  /* pointer to the queue state */
    size_t  pos;    /* position in the data */
    size_t  len;    /* length of the data */
    int32_t result; /* result of the operation */
};
typedef struct kz_ShmHdr {
    uint32_t size;      /* Size of the shared memory. 4GB max. */
    uint32_t _offset;   /* Offset of the second queue buffer. */
    uint32_t owner_pid; /* Owner process id. */
    uint32_t user_pid;  /* User process id. */

    /* for owner, queues[0] is the sending queue,
     * queues[1] is the receiving queue.
     * for user, queues[0] is the receiving queue,
     * queues[1] is the sending queue */
    kzQ_ShmInfo queues[2];
} kz_ShmHdr;
typedef struct kzQ_State {
    kz_State    *S;    /* Pointer to kz_State that owns this state */
    kzQ_ShmInfo *info; /* Pointer to queue state in shm */
    char        *data; /* Pointer to data start */
#ifdef _WIN32
    HANDLE can_push;
    HANDLE can_pop;
#endif
} kzQ_State;
struct kz_State {
#ifdef _WIN32
    DWORD  self_pid;
    HANDLE shm_fd;
#else
    int self_pid;
    int shm_fd;
#endif
    size_t     shm_size;
    kz_ShmHdr *hdr;
    kzQ_State  write;
    kzQ_State  read;
    size_t     name_len;
    char       name_buf[1];
};
/* creation/cleanup operations */

/* clang-format off */
KZ_API const char *kz_failerror(void) { return strerror(errno); }
KZ_API void        kz_freefailerror(const char *s) { (void)s; }
KZ_API int kz_unlink(const char *name)
{ return shm_unlink(name) == 0 ? KZ_OK : KZ_FAIL; }
KZ_API int kz_exists(const char *name, int *powner, int *puser) {
    kz_State S;
    S.shm_fd = shm_open(name, O_RDWR, 0666);
    if (S.shm_fd < 0) return errno == ENOENT ? 0 : KZ_FAIL;
    if (kz_mapshm(&S) != KZ_OK) return KZ_FAIL;
    if (powner) *powner = S.hdr->owner_pid;
    if (puser) *puser = S.hdr->user_pid;
    return close(S.shm_fd), 1;
}
KZ_API int kz_shutdown(kz_State *S, int mode) {
    int waked = 0;
    if ((mode & KZ_READ)) {
        kzA_storerelaxed(&S->read.info->used, KZ_MARK);
        kzQ_setneed(&S->read, 0);
        if (kzA_loadrelaxed(&S->read.info->writing))
            waked = 1, kz_futex_wake(&S->read.info->need, 1);
    }
    if ((mode & KZ_WRITE)) {
        kzA_storerelaxed(&S->write.info->used, KZ_MARK);
        kzQ_setneed(&S->write, 0);
        if (kzA_loadrelaxed(&S->write.info->reading))
            waked = 1, kz_futex_wake(&S->write.info->used, 1);
    }
    if (mode != 0 && (int32_t)kzA_loadrelaxed(&S->read.info->mux) > 0) {
#ifdef __linux__
        if (kz_has_futex_waitv) {
            if (waked) kz_futex_wake(&S->write.info->used, 1);
        } else
#endif
            (void)waked, kz_futex_wake(&S->read.info->mux, 1);
    }
    return KZ_OK;
}
KZ_API void kz_close(kz_State *S) {
    if (S == NULL) return;
    kz_shutdown(S, KZ_BOTH);
    munmap(S->hdr, S->shm_size);
    close(S->shm_fd);
    free(S);
}
/* creation/cleanup operations */

KZ_API int  kz_unlink(const char *name) { return (void)name, KZ_OK; }
KZ_API void kz_freefailerror(const char *s) { LocalFree((HLOCAL)s); }
KZ_API const char *kz_failerror(void) {
    DWORD dwErrCode = GetLastError(); /* Get the last error code */
    LPSTR lpBuf = NULL;
    DWORD dwBufSize = 0;
    DWORD dwFormatFlags = FORMAT_MESSAGE_ALLOCATE_BUFFER
                        | FORMAT_MESSAGE_FROM_SYSTEM
                        | FORMAT_MESSAGE_IGNORE_INSERTS;

    /* Let FormatMessage allocate the lpBuf for us */
    dwBufSize = FormatMessageA(
            dwFormatFlags, NULL, /* No message source needed */
            dwErrCode,           /* The error code */
            MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT), /* Default language */
            (LPSTR)&lpBuf, /* Output lpBuf pointer address */
            0,             /* Minimum allocation size, 0 means necessary size */
            NULL           /* No arguments array needed */
    );

    if (dwBufSize == 0) { /* If FormatMessage failed */
        /* Try to allocate memory for a default message */
        lpBuf = (LPSTR)LocalAlloc(LMEM_ZEROINIT, 64);
        if (lpBuf)
            StringCbPrintfA(lpBuf, 64, "Unknown error (0x%lx)", dwErrCode);
        return lpBuf;
    }

    /* Remove trailing CRLF (FormatMessage typically adds newlines) */
    if (dwBufSize >= 2) {
        DWORD i;
        /* Find and remove any trailing CR or LF characters */
        for (i = dwBufSize - 2; i < dwBufSize; i++)
            if (lpBuf[i] == '\r' || lpBuf[i] == '\n') lpBuf[i] = '\0';
    }

    return lpBuf;
}
KZ_API int kz_exists(const char *name, int *powner, int *puser) {
    HANDLE shm_fd = OpenFileMappingA(
            FILE_MAP_ALL_ACCESS, /* read/write access */
            FALSE,               /* do not inherit the name */
            name);               /* name of mapping object */
    if (shm_fd == NULL)
        return GetLastError() == ERROR_FILE_NOT_FOUND ? 0 : KZ_FAIL;
    if (powner || puser) {
        /* init the shared memory object */
        kz_ShmHdr *hdr = (kz_ShmHdr *)MapViewOfFile(
                shm_fd,              /* handle to map object */
                FILE_MAP_ALL_ACCESS, /* read/write permission */
                0,                   /* file offset (high-order DWORD) */
                0,                   /* file offset (low-order DWORD) */
                0);                  /* mapping size */
        if (hdr == NULL) {
            if (powner) *powner = 0;
            if (puser) *puser = 0;
        } else {
            if (powner) *powner = hdr->owner_pid;
            if (puser) *puser = hdr->user_pid;
            UnmapViewOfFile(hdr);
        }
    }
    return (void)CloseHandle(shm_fd), 1;
}
KZ_API int kz_shutdown(kz_State *S, int mode) {
    if ((mode & KZ_READ)) {
        kzA_storerelaxed(&S->read.info->used, KZ_MARK);
        kzQ_setneed(&S->read, 0);
    }
    if ((mode & KZ_WRITE)) {
        kzA_storerelaxed(&S->write.info->used, KZ_MARK);
        kzQ_setneed(&S->read, 0);
        SetEvent(S->write.can_pop);
    }
    return KZ_OK;
}
KZ_API void kz_close(kz_State *S) {
    if (S == NULL) return;
    kz_shutdown(S, KZ_BOTH);
    kz_cleanup(S);
    free(S);
}
/* API */

/* clang-format off */
KZ_API const char *kz_name(const kz_State *S) { return S->name_buf; }
KZ_API int         kz_pid(const kz_State *S) { return S->self_pid; }
KZ_API size_t kz_size(const kz_State *S)
{ return S->hdr ? S->hdr->queues[0].size : 0; }
/* clang-format on */

KZ_API size_t kz_aligned(size_t bufsize, size_t pagesize) {
    size_t required_size = kz_get_aligned_size(
            sizeof(kz_ShmHdr) + bufsize * 2, pagesize);
    if (!kz_is_aligned_to(required_size, KZ_ALIGN))
        required_size &= ~(KZ_ALIGN - 1); /* LCOV_EXCL_LINE */
    return required_size - sizeof(kz_ShmHdr);
}
KZ_API int kz_isowner(const kz_State *S) {
    if (S->hdr == NULL) return KZ_INVALID;
    if (S->hdr->owner_pid == S->hdr->user_pid)
        return S->write.info == S->hdr->queues;
    return (uint32_t)S->self_pid == S->hdr->owner_pid;
}
KZ_API int kz_isclosed(const kz_State *S) {
    if (S->hdr == NULL) return KZ_BOTH;
    return (kzQ_isclosed(&S->write) << 1) | kzQ_isclosed(&S->read);
}
KZ_API int kz_read(kz_State *S, kz_Context *ctx) {
    if (S->hdr == NULL) return KZ_CLOSED;
    if (kzQ_isclosed(&S->read)) return KZ_CLOSED;

    memset(ctx, 0, sizeof(kz_Context));
    ctx->state = &S->read;
    return ctx->result = kzA_cmpandswap(&S->read.info->reading, 0, 1)
                               ? kzQ_pop(ctx)
                               : KZ_BUSY;
}
KZ_API int kz_write(kz_State *S, kz_Context *ctx, size_t len) {
    size_t need;
    if (S->hdr == NULL) return KZ_CLOSED;

    need = kzQ_calcneed(&S->write, len);
    if (need > S->write.info->size) return KZ_TOOBIG;
    if (kzQ_isclosed(&S->write)) return KZ_CLOSED;

    memset(ctx, 0, sizeof(kz_Context));
    ctx->state = &S->write;
    ctx->len = need;
    if (kzA_cmpandswap(&S->write.info->writing, 0, 1)) {
        if ((ctx->result = kzQ_push(ctx)) == KZ_AGAIN) {
            ctx->pos = 0, ctx->len = need;
            kzQ_setneed(&S->write, need);
        }
        return ctx->result;
    }
    return ctx->result = KZ_BUSY;
}
KZ_API char *kz_buffer(kz_Context *ctx, size_t *plen) {
    kzQ_State *QS = (kzQ_State *)ctx->state;
    assert(QS != NULL);
    if (ctx->result != KZ_OK) return NULL;
    if (plen) *plen = ctx->len - sizeof(uint32_t);
    return QS->data + ctx->pos + sizeof(uint32_t);
}
KZ_API int kz_isread(const kz_Context *ctx) {
    const kzQ_State *QS = (const kzQ_State *)ctx->state;
    assert(QS != NULL);
    return QS == &QS->S->read;
}
KZ_API void kz_cancel(kz_Context *ctx) {
    kzQ_State *QS = (kzQ_State *)ctx->state;
    assert(QS != NULL);
    if (kz_isread(ctx))
        kzA_store(&QS->info->reading, 0);
    else if (kzA_cmpandswap(&QS->info->writing, 1, 0))
        kzQ_setneed(QS, 0);
}
KZ_API int kz_commit(kz_Context *ctx, size_t len) {
    kzQ_State *QS = (kzQ_State *)ctx->state;
    assert(QS != NULL);
    if (ctx->result != KZ_OK) return KZ_INVALID;
    return kz_isread(ctx) ? kzQ_commitpop(ctx) : kzQ_commitpush(ctx, len);
}
KZ_API int kz_waitcontext(kz_Context *ctx, int millis) {
    kzQ_State *QS = (kzQ_State *)ctx->state;
    assert(QS != NULL);
    if ((int)ctx->result != KZ_AGAIN) return ctx->result;
    for (;;) {
        int isread = kz_isread(ctx);
        int r = isread ? kzQ_waitpop(QS, millis)
                       : kzQ_waitpush(QS, ctx->len, millis);
        if (r != KZ_OK) return ctx->result = r;
        r = isread ? kzQ_pop(ctx) : kzQ_push(ctx);
        ctx->result = (r == KZ_AGAIN) ? KZ_TIMEOUT : r;
        if (millis >= 0 || ctx->result != KZ_TIMEOUT) return ctx->result;
    }
}
KZ_API int kz_wait(kz_State *S, size_t len, int millis) {
    int    canread = KZ_OK, canwrite = KZ_OK;
    size_t need;
    if (S->hdr == NULL) return KZ_CLOSED;
    if (kzQ_isclosed(&S->read) || kzQ_isclosed(&S->write)) return KZ_CLOSED;

    need = kzQ_calcneed(&S->write, len);
    if (need > S->write.info->size) return KZ_TOOBIG;
    for (;;) {
        canread = (kzA_load(&S->read.info->used) != 0);
        canwrite = (kzQ_freesize(&S->write) >= need);
        if (millis != 0 && !canread && !canwrite) {
            int r;
            kzQ_setneed(&S->write, need);
            if ((r = kzQ_waitmux(S, need, millis)) != KZ_OK) return r;
            if (kzQ_isclosed(&S->read) || kzQ_isclosed(&S->write))
                return KZ_CLOSED;
            canread = (kzA_load(&S->read.info->used) != 0);
            canwrite = (kzQ_freesize(&S->write) >= need);
        }
        if (canread && canwrite) return KZ_BOTH;
        if (canwrite) return KZ_WRITE;
        if (canread) return KZ_READ;
        if (millis >= 0) return KZ_TIMEOUT;
    }
}
KZ_API kz_State *kz_open(const char *name, int flags, size_t bufsize) {
    kz_State *S = kz_newstate(name);
    size_t    queue_size;
    int       ret;
    if (S == NULL) return NULL;
    S->hdr = NULL;

#if defined(__linux__) && defined(SYS_futex_waitv)
    kz_check_waitv();
#endif

    /* calcuate the size of the shared memory object */
    S->shm_size = kz_get_aligned_size(sizeof(kz_ShmHdr) + bufsize, KZ_ALIGN);
    queue_size = (S->shm_size - sizeof(kz_ShmHdr)) / 2;

    /* check the size of the ring buffer */
    if ((flags & KZ_CREATE)
        && (queue_size < sizeof(uint32_t) * 2 || S->shm_size >= KZ_MAX_SIZE)) {
#ifdef _WIN32
        SetLastError(ERROR_INVALID_PARAMETER);
#else
        errno = EINVAL;
#endif
        return (void)kz_initfail(S), NULL;
    }

    ret = flags & KZ_CREATE ? kz_createshm(S, flags) : kz_openshm(S);
    return ret == KZ_OK ? S : NULL;
}